# log-fooot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
log_fooot/: __init__.py  __main__.py  cli.py  crawl.py  exclude_ips.py  exclude_paths.py  log_parser.py  sessions.py  visualize.py
result/: report.html  report_en.html  sitemap.json
scripts/: generate_sample_log.py
tests/: test_exclude_paths.py
